// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeText component should render free text CC 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`FreeText component should render free text CC with inlined pubmeds 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua (PubMed:
    <a
      href="/citations/1234567"
    >
      1234567
    </a>
    , PubMed:
    <a
      href="/citations/12345678"
    >
      12345678
    </a>
    ).
    <br />
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`FreeText component should render free text CC, without evidences nor inlined pubmeds 1`] = `
<DocumentFragment>
  <div
    class="text-block"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</DocumentFragment>
`;
